# Operating_systems

lab1/: .gitignore  CMakeLists.txt  Employee.h  README.md  main.cpp
lab1/Creator/: creator.cpp
lab1/Reporter/: reporter.cpp
lab2/: CMakeLists.txt  README.md  main.cpp
lab2/src/: average.cpp  average.h  config.cpp  config.h  min_max.cpp  min_max.h
lab2/test/: tests.cpp
lab3/: main.cpp
lab4/: CMakeLists.txt  common.h  receiver.cpp  sender.cpp
lab4/tests/: test_logic.cpp
